base/spec-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: ghost
  template:
    metadata:
      labels:
        app: ghost
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: doks.digitalocean.com/node-pool
                    operator: In
                    values:
                      - worker-pool
      containers:
        - name: ghost
          imagePullPolicy: IfNotPresent
          image: ghost:4.48.7-alpine
          ports:
            - containerPort: 2368
              name: ghost
          volumeMounts:
            - mountPath: /var/lib/ghost/content
              name: ghost-pvc
      volumes:
        - name: ghost-pvc
          persistentVolumeClaim:
            claimName: ghost-pvc
