base/spec-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ghost
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 2368
  selector:
    app: ghost
